--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.0
   provider: ^5.0.0
+  google_maps_flutter: ^2.0.6
 
 dev_dependencies:
   flutter_test:
